Partial commit. Updates for first deco3800 crit
This gets (hopefully) just enough working for the first DECO3800 presentations

--- a/app/views/components/group/viewGroupSet.html
+++ b/app/views/components/group/viewGroupSet.html
@@ -34,7 +34,7 @@
     </p>
     
     <button class="btn btn-sm btn-default" ng-hide="show_gpreenrol" ng-click="show_gpreenrol=true"><i class="icon-plus"></i></button>
-    <div ng-show="show_gpreenrol" ng-controller="Assessory.controllers.group.CreateGPreenrol">
+    <div ng-show="show_gpreenrol" ng-controller="group.CreateGPreenrol">
       <div class="form">
         <div class="form-group">
           <label>CSV data</label>
