--- a/app/views/components/task/view.html
+++ b/app/views/components/task/view.html
@@ -17,11 +17,8 @@
   
   
   <div ng-switch="task.body.kind">
-    <div ng-switch-when="Group critique by an individual">
-      <group-crit-info task="task"></group-crit-info>
-    </div>
-    <div ng-switch-when="Task output critique">
-      <task-output-critique-allocations task="task"></task-output-critique-allocations>
+    <div ng-switch-when="Critique">
+      <critique-info task="task"></critique-info>
     </div>
   </div>
 </div>
