Changes to get reverse crits working again for DECO3800

--- a/app/views/components/critique/directive_critFill.html
+++ b/app/views/components/critique/directive_critFill.html
@@ -1,9 +1,15 @@
 <div ng-if="taskOutput">
 
-  <questionnaire-fill questionnaire="task.body.questionnaire" answers="taskOutput.body.answers" ></questionnaire-fill>
-  <div>
-    <button class="btn btn-default" ng-click="save(false)">Save</button>
-    <button class="btn btn-primary"  ng-click="save(true)">Save &amp; publish</button>
-  </div>
+  <div ng-if="taskOutput.permissions.edit">
+    <questionnaire-fill questionnaire="task.body.questionnaire" answers="taskOutput.body.answers" ></questionnaire-fill>
+    <div>
+      <button class="btn btn-primary" ng-click="save(false)">Save</button>
+      <!-- <button class="btn btn-primary"  ng-click="save(true)">Save &amp; publish</button> -->
+    </div>
 
+    <saved-message promise="promise" success-message="Saved"></saved-message>
+  </div>
+  <div ng-if="!taskOutput.permissions.edit">
+    <questionnaire-view questionnaire="task.body.questionnaire" answers="taskOutput.body.answers" ></questionnaire-view>
+  </div>
 </div>
