--- a/app/views/components/question/directive_questionnaireView.html
+++ b/app/views/components/question/directive_questionnaireView.html
@@ -2,7 +2,7 @@
   <div class="form">
     
     <div ng-repeat="question in questionnaire.questions">
-     <div ng-if="showQuestion(question)">
+     <div ng-if="showQuestion(question)" class="form-group">
      
       <label>{{ question.prompt }}</label>
       
