--- a/app/views/components/critique/directive_targetLabel.html
+++ b/app/views/components/critique/directive_targetLabel.html
@@ -4,7 +4,7 @@
         <group-label group-id="target.ref"></group-label>
     </span>
     <span ng-switch-when="TaskOutput">
-        {{ $index }}
+        {{ 1 + index }}
     </span>
   </span>
 </span>
