--- a/app/views/components/question/directive_questionnaireFill.html
+++ b/app/views/components/question/directive_questionnaireFill.html
@@ -1,6 +1,6 @@
 <div>
   <div class="form">
-    <div ng-repeat="question in questionnaire.questions">
+    <div ng-repeat="question in questionnaire.questions" class="form-group">
       <label>{{ question.prompt }}</label>
       
       <div ng-switch="question.kind">
