--- a/app/views/components/taskoutput/edit.html
+++ b/app/views/components/taskoutput/edit.html
@@ -21,10 +21,9 @@
   </div>
   
   <hr />
-  <div ng-repeat="error in errors" class="alert alert-danger">
-    {{ error }}
-  </div>
-  
+
+  <saved-message promise="promise" success-message="Saved"></saved-message>
+
   <label>When you are sure you have finished editing you're critique, "finalise" it to
     make it available for marking.</label>
   <div>
